app/client/envoy/service-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/dump"
                route:
                  cluster: db_dump
              - match:
                  prefix: "/write"
                route:
                  cluster: db_write
              - match:
                  prefix: "/read"
                route:
                  cluster: db_read
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: db_dump
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: db_dump
        port_value: 80
  - name: db_write
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: db_write
        port_value: 80
  - name: db_read
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: db_read
        port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 8001
